# otamot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  QA_CHECKLIST.md  README.md  SKINNING.md  TODO.md  build.rs  simulation  simulation.rs  slash_command_cursor.patch
.agents/: SOUL.md
.agents/docs/: ARCHITECTURE.md  CICD.md  CODE_STYLE.md  FEATURES.md  LOCALIZATION.md  RELEASES.md  TOOLCHAIN.md  WORKFLOW.md
.agents/skills/gh-grab-and-fix/: SKILL.md
.agents/sub/leonardo/: SOUL.md
.agents/subagents/: code_reviewer.md  software_engineer.md  test_writer.md
.github/workflows/: ci.yml  leonardo-review.yml  release.yml
assets/icons/: icon.icns
locales/: de.json  en.json
src/: app.rs  bell.rs  commands.rs  config.rs  hashtags.rs  kanban.rs  lib.rs  localization.rs  main.rs  markdown.rs  notes.rs  survey.rs  timer.rs  todo.rs  ui_components.rs  vim.rs
src/easy_mark/: editor.rs  highlighter.rs  mod.rs  parser.rs
src/ui/: mod.rs  notes.rs  sidebar.rs  timer.rs
ui/: main.slint
