[package]
name = "otamot"
version = "0.1.0"
edition = "2021"
authors = ["samrocksc"]
description = "A cross-platform Pomodoro timer with notes support"
license = "MIT"
repository = "https://github.com/samrocksc/otamot"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"

[[bin]]
name = "otamot"
path = "src/main.rs"
