[package]
name = "otamot"
version = "0.2.7"
edition = "2021"
authors = ["samrocksc"]
description = "A cross-platform Pomodoro timer with notes support"
license = "MIT"
repository = "https://github.com/samrocksc/otamot"

[lib]
name = "otamot"
path = "src/lib.rs"

[[bin]]
name = "otamot"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
image = "0.25"  # For loading icon images
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
rodio = { version = "0.20", default-features = false, features = [
    "symphonia-all",
] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
